old-code/app-template/manifests/overlays/staging/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exampleapp-ingress
spec:
  rules:
    - host: staging.app.change.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: exampleapp
                port:
                  name: web
